# difftastic-server

./: AGENTS.md  Cargo.toml  README.md  build.rs
.trae/: .ignore
docs/: grpc-http-service-design.md  src-modules-analysis.md
src/: main.rs  server_main.rs
src/api/: cli.rs  core.rs  mod.rs
src/api/proto/: difftastic.proto
src/api/server/: grpc_server.rs  http_server.rs  mod.rs
src/diff/: sliders.rs
src/display/: side_by_side.rs
tests/: cli.rs
vendored_parsers/highlights/: elvish.scm  kotlin.scm  scss.scm  smali.scm
