[package]
name = "difftastic-server"
description = "A structural diff tool that compares files based on their syntax trees, with built-in HTTP/gRPC server and multi-interaction support."
repository = "https://github.com/kkkqkx123/difftastic-server"
license = "MIT"
version = "0.69.0"
authors = ["kkkqkx123 <k9369834@outlook.com>"]
keywords = ["diff", "syntax", "server", "cli"]
categories = ["development-tools", "command-line-utilities", "parser-implementations"]
edition = "2021"
rust-version = "1.85.0"
include = [
        "/build.rs",
        "/src/",
        "/vendored_parsers/highlights/*.scm",
        "/vendored_parsers/*-src/**/*.c",
        "/vendored_parsers/*-src/**/*.h",
        "/vendored_parsers/*-src/**/*.cc",
        "/LICENSE",
        "/README.md",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/difft-{ target }.{ archive-format }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
regex = "1.10.4"
clap = { version = "4.0.0", features = ["cargo", "env", "wrap_help", "string"] }
typed-arena = "2.0.2"
rustc-hash = "2.0.0"
strsim = "0.11.0"
lazy_static = "1.4.0"
libc = "0.2.108"
log = "0.4.14"
pretty_env_logger = "0.5.0"

radix-heap = "0.4.2"
# ignore does not declare a MSRV, but it's part of ripgrep, which has
# a slightly more aggressive MSRV than difftastic. Constrain ignore to
# a known-good max version.
ignore = ">= 0.4, < 0.4.24"
owo-colors = "4.2.3"
wu-diff = "0.1.2"
rayon = "1.7.0"
tree_magic_mini = "3.1.6"

bumpalo = "3.16.0"
unicode-width = "0.1.9"
crossterm = { version = "0.28.0", features = ["windows"] }
glob = "0.3.1"
strum = { version = "0.26", features = ["derive"] }
hashbrown = "0.14.0"
humansize = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
line-numbers = "0.3.0"
smallvec = "1.13.2"
streaming-iterator = "0.1.9"
encoding_rs = "0.8.35"

# tree-sitter itself.
tree-sitter = "~0.26.3"
tree-sitter-language = "0.1.3"

# tree-sitter parsers that are available on crates.io.
tree-sitter-ada = "0.1.0"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-clojure-orchard = "0.2.5"
tree-sitter-cmake = "0.7.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-dart-orchard = "0.3.0"
tree-sitter-devicetree = "0.14.1"
tree-sitter-elisp = "1.6.1"
tree-sitter-elixir = "0.3.4"
tree-sitter-elm = "5.8.0"
tree-sitter-erlang = "0.16.0"
tree-sitter-fsharp = "0.3.0"
tree-sitter-fortran = "0.5.1"
tree-sitter-gleam = "1.0.0"
tree-sitter-go = "0.25.0"
tree-sitter-haskell = "0.23.1"
tree-sitter-hcl = "1.1.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.4"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-julia = "0.23.1"
tree-sitter-lua = "0.5"
tree-sitter-make = "1.1.1"
tree-sitter-newick = "1.1.0"
tree-sitter-nix = "0.3.0"
tree-sitter-objc = "3.0.2"
tree-sitter-ocaml = "0.24.0"
tree-sitter-pascal = "0.10.0"
tree-sitter-php = "0.23.11"
tree-sitter-proto = "0.2.0"
tree-sitter-python = "0.25.0"
tree-sitter-qmljs = "0.3.0"
tree-sitter-r = "1.2.0"
tree-sitter-racket = "0.24.7"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust-orchard = "0.16.6"
tree-sitter-scala = "0.26.0"
tree-sitter-scheme = "0.24.7"
tree-sitter-sequel = "0.3.11"
tree-sitter-sfapex = "2.4.0"
tree-sitter-solidity = "1.2.13"
tree-sitter-swift = "0.7.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-verilog = "1.0.3"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.0"
tree-sitter-zig = "1.1.2"
ts-parser-perl = "1.0.1"
tree-sitter-asm = "0.24.0"
tree-sitter-commonlisp = "0.4.1"
tree-sitter-vhdl = "1.4.0"

# HTTP server
axum = { version = "0.8", features = ["macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"], optional = true }
http = { version = "1.1", optional = true }

# gRPC server
tonic = { version = "0.12", optional = true }
tonic-reflection = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

# Shared server dependencies
tokio = { version = "1", optional = true, features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-appender = "0.2.4"

[target.'cfg(not(any(windows, target_os = "illumos", target_os = "freebsd")))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

pretty_assertions = "1.3.0"

[build-dependencies]
# TODO: enable parallel mode once MSRV hits 1.61, see discussion in
# https://github.com/rust-lang/cc-rs/pull/849
cc = "1.2.13"
rayon = "1.7.0"
version_check = "0.9.4"
tonic-build = { version = "0.12", optional = true }

[profile.release]
lto = "thin"

[[bin]]
name = "difft"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "difft-server"
path = "src/server_main.rs"
required-features = ["server"]

[package.metadata.deb]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
	"$auto",
	[ "difft.1", "usr/share/man/man1/", "644" ],
	[ "CHANGELOG.md", "usr/share/doc/difftastic/", "644" ],
]

[features]
default = ["cli"]
cli = []
http = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:http"]
grpc = ["http", "dep:tonic", "dep:tonic-build", "dep:tonic-reflection", "dep:prost"]
server = ["grpc"]
